examples/test/testpolicy19849.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19849
  namespace: namespace411
spec:
  podSelector:
    matchLabels:
      key25: value37
      key5: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key9: value12
          key39: value46
      podSelector:
        matchLabels:
          key28: value47
          key5: value14
          key39: value12
